--- a/app.css
+++ b/app.css
@@ -58,7 +58,7 @@ body{
 #header>span{
 	color:white;
 	font-family:Poppins;
-	font-size:2em;
+	font-size:2rem;
 	font-weight:900;
 	left: 8%;
 	position: absolute;
@@ -77,7 +77,7 @@ body{
 #header li{
 	float:left;
 	font-family:Poppins;
-	font-size:medium;
+	font-size:1.17rem;
 	list-style:none;	
 	margin-right:2%;
 	transition:padding 0.5s,font-size 0.5s;
@@ -85,7 +85,7 @@ body{
 
 #header li:hover{
 	border-bottom:2px solid white;
-	font-size:large;
+	font-size:1.18rem;
 	padding:3px;
 }
 
