--- a/public/app.css
+++ b/public/app.css
@@ -1,7 +1,3 @@
-.active{
-	background-color:white !important;
-}
-
 .admission{
 	color:black;
 	display:none;
@@ -17,6 +13,9 @@
 
 body{
 	margin:0;
+}
+.column{
+	background-color:#D4E157;
 }
 /******news*******/
 
@@ -61,6 +60,10 @@ body{
 
 #content>div>.segment{
 	display:none;
+}
+
+#content .item{
+	font-weight:700 !important;
 }
 
 .employment{
@@ -212,7 +215,6 @@ body{
 
 .item{
 	font-family:Poppins !important;
-	font-weight:700 !important;
 }
 
 .news{
